# tinyrenderer

./: CMakeLists.txt  README.md
asset/scene/: cornell-box.json  firehydrant.json  firehydrantWithFloor.json  gun.json  gunWithFloor.json  hydrant.json  multi-sphere.json  skybox.json  sphere.json  statue.json  teapot.json
asset/shader/: comman_brdf.glsl  comman_utils.glsl  common_brdf.glsl  common_normal.glsl  common_raymarch.glsl  common_sampling.glsl  common_shadow.glsl  deferred_gbuffer.frag  deferred_gbuffer.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_shading.frag  deferred_shading.fs  equirect_to_cubemap.frag  equirect_to_cubemap.vert  forward_opaque.frag  forward_opaque.vert  forward_transparent.frag  forward_transparent.vert  ibl_brdf_lut.frag  ibl_irradiance.frag  ibl_prefiltered.frag  ibl_prefiltered.vert  postprocess.frag  postprocess_bloom.frag  postprocess_gaussian_blur.frag  postprocess_gaussian_blur.vert  postprocess_highlight.frag  postprocess_kawase_down.frag  postprocess_kawase_down.vert  postprocess_kawase_up.frag  postprocess_kawase_up.vert  postprocess_lensflare.frag  shadow_mapping.vert  shadow_mapping.vs  skybox.frag  skybox.vert
include/: application.hpp  bindablebuffer.hpp  camera.hpp  displayinfo.hpp  editor.hpp  editorsetting.hpp  framebuffer.hpp  graphicbuffer.hpp  image.hpp  indexbuffer.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  pipelinestate.hpp  renderer.hpp  renderersetting.hpp  renderitem.hpp  renderpass.hpp  rendersetting.hpp  resourcemanager.hpp  sampler.hpp  scene.hpp  shader.hpp  shaderstoragebuffer.hpp  staticresource.hpp  texture.hpp  uniformbuffer.hpp  utils.hpp  vertexbuffer.hpp  vertexlayout.hpp
scene/firehydrant/: firehydrant.json
scene/gun/: gun.json  gun.mtl
scene/statue/: statue.json
scene/teapot/: teapot.json
scenes/firehydrant/: firehydrant.json
scenes/gun/: gun.json
shader/: pbr.fs  pbr.vs  phong.fs  phong.vs  shadow.vs
src/: application.cpp  camera.cpp  editor.cpp  framebuffer.cpp  graphicbuffer.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  resourcemanager.cpp  sampler.cpp  scene.cpp  shader.cpp  staticresource.cpp  texture.cpp  uniformbuffer.cpp  utils.cpp  vertexlayout.cpp
(+19 files in other folders)
